# python-objectness

./: .gitignore  computeIntegralImageScores.py  computeObjectnessHeatMap.py  computeQuantMatrix.py  computeScores.py  defaultParams.py  demo.py  drawBoxes.py  generateWindows.py  integralHistSuperpixels.py  integrateBayes.py  nms_pascal.py  readme.md  retrieveCoordinates.py  rgb2lab.py  runObjectness.py  segmentArea.py  windowComputeScores.py
Data/: params.mat
c_segment/: 002053.ppm  002053_out.ppm  CMakeLists.txt  c_segment.py  interface.cpp  segment  segment-image.h  segment.cpp
matlab_functions/: fspecial.py  mat2gray.py
mex_functions/: NMS_sampling.py  computeIntegralHistogram.py  computeScoreContrast.py  scoreSampling.py  slidingWindowComputeScore.py
py_segment/: graph.py  py_segment.py
results/: readme.md
