cmake_minimum_required(VERSION 2.8)
project(c_segment)
add_subdirectory(pybind11)
pybind11_add_module(c_segment interface.cpp)

# aux_source_directory(. SRC_LIST)
# set(CXXFLAGS "-g -std=c++11")
# set(CXXFLAGS "-lrt -std=c++11 -DHAVE_CXX0X -openmp -march=native -fpic -w -fopenmp -ftree-vectorize -ftree-vectorizer-verbose=0")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXXFLAGS}")
# pybind11_add_module(interface ${SRC_LIST})
# add_executable(c_segment_test ${SRC_LIST})
# set(CXXFLAGS "-O2 -std=c++14")
# set(CXXFLAGS "-lrt -std=c++11 -DHAVE_CXX0X -openmp -march=native -fpic -w -fopenmp -ftree-vectorize -ftree-vectorizer-verbose=0")
# set(CXXFLAGS "-O2 -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -openmp -march=native -fpic -w -fopenmp -ftree-vectorize -ftree-vectorizer-verbose=0")